增添交易接口
